login signup apis

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 NODE_ENV=development
 PORT=3000
 
-DB_CLOUD=mongodb+srv://AkashTyagi874:sjNwX2J95gNrcfPK@cluster0.ywlpj.mongodb.net/devmil?retryWrites=true&w=majority
+#DB_CLOUD=mongodb+srv://AkashTyagi874:sjNwX2J95gNrcfPK@cluster0.ywlpj.mongodb.net/devmil?retryWrites=true&w=majority
 JWT_PRIVATE_KEY=myprivatekey
+DB_CLOUD=mongodb+srv://akashtyagi555:O98NRbE4EVdiBXn7@cluster0.pshby.mongodb.net/?retryWrites=true&w=majority
 #DB_HOST = np-db-maria-1.chp9usepkri2.us-east-2.rds.amazonaws.com
 #DB_USER = devwpuser
 #DB_PASSWORD = Wp1234
